--- a/api/setup/translations/base.de.po
+++ b/api/setup/translations/base.de.po
@@ -277,8 +277,13 @@ msgstr "Grau"
 msgid "Red"
 msgstr "Rot"
 
+#, fuzzy
 msgid "White"
-msgstr "Weiss"
+msgstr ""
+"#-#-#-#-#  base.de.po (1.0)  #-#-#-#-#\n"
+"Weiss\n"
+"#-#-#-#-#  base.de.po (1.0)  #-#-#-#-#\n"
+"Weiß"
 
 msgid "NoHair"
 msgstr "Glatze"
@@ -379,9 +384,6 @@ msgstr "Beige"
 msgid "Bisque"
 msgstr "Bisque"
 
-msgid "Black"
-msgstr "Schwarz"
-
 msgid "BlanchedAlmond"
 msgstr "Mandelweiß"
 
@@ -390,9 +392,6 @@ msgstr "Blau"
 
 msgid "BlueViolet"
 msgstr "Blau Violett"
-
-msgid "Brown"
-msgstr "Braun"
 
 msgid "BurlyWood"
 msgstr "Kräftiges Holz"
@@ -619,9 +618,6 @@ msgstr "Mittleres Seegrün"
 msgid "MediumSlateBlue"
 msgstr "Mittleres Schieferblau"
 
-msgid "MediumSlateBlue"
-msgstr "Mittleres Schieferblau"
-
 msgid "MediumSpringGreen"
 msgstr "Mittleres Frühlingsgrün"
 
@@ -700,9 +696,6 @@ msgstr "Lila"
 msgid "RebeccaPurple"
 msgstr "Rebecca Lila"
 
-msgid "Red"
-msgstr "Rot"
-
 msgid "RosyBrown"
 msgstr "Rosy Brown"
 
@@ -768,9 +761,6 @@ msgstr "Violett"
 
 msgid "Wheat"
 msgstr "Weizen"
-
-msgid "White"
-msgstr "Weiß"
 
 msgid "WhiteSmoke"
 msgstr "Weißer Rauch"
