Added translations & added *.mo to gitignore

--- a/api/setup/translations/base.pot
+++ b/api/setup/translations/base.pot
@@ -762,3 +762,12 @@ msgstr ""
 
 msgid "rowingTeaser"
 msgstr ""
+
+msgid "steered"
+msgstr ""
+
+msgid "crewsize"
+msgstr ""
+
+msgid "discipline"
+msgstr ""
