--- a/api/setup/translations/base.de.po
+++ b/api/setup/translations/base.de.po
@@ -2,13 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: me@rowmate.org\n"
-"POT-Creation-Date: 2020-10-04 21:00+0200\n"
-"PO-Revision-Date: 2020-10-04 21:00+0200\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2020-10-11 11:36+0200\n"
 "Last-Translator: Support <support@rowmate.org>\n"
 "Language-Team: English <support@rowmate.org>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 2.4.1\n"
 
 msgid "name"
 msgstr "Name"
@@ -277,13 +279,8 @@ msgstr "Grau"
 msgid "Red"
 msgstr "Rot"
 
-#, fuzzy
 msgid "White"
-msgstr ""
-"#-#-#-#-#  base.de.po (1.0)  #-#-#-#-#\n"
-"Weiss\n"
-"#-#-#-#-#  base.de.po (1.0)  #-#-#-#-#\n"
-"Weiß"
+msgstr "Weiß"
 
 msgid "NoHair"
 msgstr "Glatze"
@@ -777,4 +774,13 @@ msgstr "Digga das Datum stimmt nicht"
 msgid "rowingTeaser"
 msgstr ""
 "Rowmate ermöglicht es, sich innerhalb des Vereins zum Rudern zu verabreden. "
-"Registriere Dich jetzt kostenlos!"
+"Registriere Dich jetzt kostenlos."
+
+msgid "steered"
+msgstr ""
+
+msgid "crewsize"
+msgstr ""
+
+msgid "discipline"
+msgstr ""
