--- a/api/setup/translations/base.pot
+++ b/api/setup/translations/base.pot
@@ -1,5 +1,16 @@
+#
+#, fuzzy
 msgid ""
 msgstr ""
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 2.4.1\n"
 
 msgid "name"
 msgstr ""
@@ -770,4 +781,241 @@ msgid "crewsize"
 msgstr ""
 
 msgid "discipline"
+msgstr ""
+
+msgid "boats"
+msgstr ""
+
+msgid "Close"
+msgstr ""
+
+msgid "Cry"
+msgstr ""
+
+msgid "Dizzy"
+msgstr ""
+
+msgid "EyeRoll"
+msgstr ""
+
+msgid "Happy"
+msgstr ""
+
+msgid "Hearts"
+msgstr ""
+
+msgid "Side"
+msgstr ""
+
+msgid "Squint"
+msgstr ""
+
+msgid "Surprised"
+msgstr ""
+
+msgid "Wink"
+msgstr ""
+
+msgid "WinkWacky"
+msgstr ""
+
+msgid "Angry"
+msgstr ""
+
+msgid "AngryNatural"
+msgstr ""
+
+msgid "DefaultNatural"
+msgstr ""
+
+msgid "FlatNatural"
+msgstr ""
+
+msgid "RaisedExcited"
+msgstr ""
+
+msgid "RaisedExcitedNatural"
+msgstr ""
+
+msgid "SadConcerned"
+msgstr ""
+
+msgid "SadConcernedNatural"
+msgstr ""
+
+msgid "UnibrowNatural"
+msgstr ""
+
+msgid "UpDown"
+msgstr ""
+
+msgid "UpDownNatural"
+msgstr ""
+
+msgid "Blank"
+msgstr ""
+
+msgid "Kurt"
+msgstr ""
+
+msgid "Prescription01"
+msgstr ""
+
+msgid "Prescription02"
+msgstr ""
+
+msgid "Round"
+msgstr ""
+
+msgid "Sunglasses"
+msgstr ""
+
+msgid "Wayfarers"
+msgstr ""
+
+msgid "BeardMedium"
+msgstr ""
+
+msgid "BeardLight"
+msgstr ""
+
+msgid "BeardMajestic"
+msgstr ""
+
+msgid "MoustacheFancy"
+msgstr ""
+
+msgid "MoustacheMagnum"
+msgstr ""
+
+msgid "Tanned"
+msgstr ""
+
+msgid "Pale"
+msgstr ""
+
+msgid "Light"
+msgstr ""
+
+msgid "DarkBrown"
+msgstr ""
+
+msgid "LongHairFrida"
+msgstr ""
+
+msgid "LongHairFro"
+msgstr ""
+
+msgid "LongHairFroBand"
+msgstr ""
+
+msgid "LongHairNotTooLong"
+msgstr ""
+
+msgid "LongHairShavedSides"
+msgstr ""
+
+msgid "LongHairMiaWallace"
+msgstr ""
+
+msgid "LongHairStraight"
+msgstr ""
+
+msgid "LongHairStraight2"
+msgstr ""
+
+msgid "LongHairStraightStrand"
+msgstr ""
+
+msgid "ShortHairDreads01"
+msgstr ""
+
+msgid "ShortHairDreads02"
+msgstr ""
+
+msgid "ShortHairFrizzle"
+msgstr ""
+
+msgid "ShortHairShaggyMullet"
+msgstr ""
+
+msgid "ShortHairShortCurly"
+msgstr ""
+
+msgid "ShortHairShortFlat"
+msgstr ""
+
+msgid "ShortHairShortRound"
+msgstr ""
+
+msgid "ShortHairShortWaved"
+msgstr ""
+
+msgid "ShortHairSides"
+msgstr ""
+
+msgid "ShortHairTheCaesar"
+msgstr ""
+
+msgid "ShortHairTheCaesarSidePart"
+msgstr ""
+
+msgid "BlazerShirt"
+msgstr ""
+
+msgid "BlazerSweater"
+msgstr ""
+
+msgid "CollarSweater"
+msgstr ""
+
+msgid "GraphicShirt"
+msgstr ""
+
+msgid "Hoodie"
+msgstr ""
+
+msgid "Overall"
+msgstr ""
+
+msgid "ShirtCrewNeck"
+msgstr ""
+
+msgid "ShirtScoopNeck"
+msgstr ""
+
+msgid "ShirtVNeck"
+msgstr ""
+
+msgid "Bat"
+msgstr ""
+
+msgid "Cumbia"
+msgstr ""
+
+msgid "Deer"
+msgstr ""
+
+msgid "Diamond"
+msgstr ""
+
+msgid "Hola"
+msgstr ""
+
+msgid "Pizza"
+msgstr ""
+
+msgid "Resist"
+msgstr ""
+
+msgid "Selena"
+msgstr ""
+
+msgid "Bear"
+msgstr ""
+
+msgid "SkullOutline"
+msgstr ""
+
+msgid "Skull"
 msgstr ""
