Added translation-strings to base-file

--- a/api/setup/translations/base.pot
+++ b/api/setup/translations/base.pot
@@ -1022,3 +1022,12 @@ msgstr ""
 
 msgid "addboat"
 msgstr ""
+
+msgid "noboat"
+msgstr ""
+
+msgid "addboat"
+msgstr ""
+
+msgid "delete"
+msgstr ""
